WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259944
REGRESSION (
259904@main
): @math operation cannot trigger in Quip app
https://bugs.webkit.org/show_bug.cgi?id=259944
Summary
REGRESSION (259904@main): @math operation cannot trigger in Quip app
Wenson Hsieh
Reported
2023-08-08 14:13:38 PDT
rdar://113229516
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-08-08 14:29:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16492
EWS
Comment 2
2023-08-10 14:17:30 PDT
Committed
266781@main
(457eb4252b1f): <
https://commits.webkit.org/266781@main
> Reviewed commits have been landed. Closing PR #16492 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug